# hedgehog

./: .env.example  Cargo.toml  README.md
src/: db.rs  download_item.rs  main.rs  url_input.rs  utils.rs
src/ui/: debounced_input.rs  mod.rs  modal.rs  url_input.rs
src/utils/: mod.rs
