[package]
name = "hedgehog"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = [ "tokio", "async-std"] }
iced_futures = "0.13"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.36.0", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
